--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
